CHANGELOG for ClamTk:

6.08 - 2021XXXX
---------------
    * Completely remove older repo (clamtk-gtk3), use clamtk only
    * Bug: app doesn't scan files/folders on demand  (Debian #981384)
    * Bug: Do not inject 'no-separator' into window decoration
      (Github #126)

6.07 - 20210130
---------------
    * Update to look for additional information during update
      to know when finished
    * Update dates to 2021

6.06 - 20200916
---------------
    * Fix for 'Show Hidden Files' checkbox automatically
      (Launchpad #1876497)
    * Remove env from clamtk startup for correct
      dependency detection (rpmlint)
    * Minor language updates to desktop file
    * Updated language files: Japanese (ja), English (en_AU),
      Mon (mnw_MM), Finnish (fi), Malay (ms)

6.05 - 20200809
---------------
    * Exclude Timeshift directory (Github #121)
    * Added Help button in Analysis to explain its purpose
      (Github #122)
    * Updated language files: English (en_UK), Galician (gl),
      Ukrainian (uk), French (fr), Afrikans (af), Hebrew (he),
      Chinese (zh_TW)

6.04 - 20200711
---------------
    * Add Encrypted.PDF as clean (Github #120). Also, remove alert-
      encrypted-* options
    * Add set LC_TIME (Gitlab commit a7b3a31c)
    * More README cleanup
    * Updated language files: Dutch (nl), Afrikans (af),
      Indonesian (id), English (en_UK)

6.03 - 20200423
---------------
    * Bug fix affecting manual updates
    * Update year (2019 -> 2020)
    * Clean up man page
    * Heuristic scanning made an option rather than a default
    * Fix icon mismatch in the Scheduler
    * Fix icon glitch in Update
    * Updated language files: English (en_UK), Indonesian (id),
      Swedish (sv) (Launchpad #1688469)

6.02 - 20190919
---------------
    * Updated language files: Turkish (tr), Kazakh (kk), Swedish (sv),
      Malay (ms), English (en_AU), Finnish (fi), Spanish (es),
      French (fr), Hebrew (he), Ukrainian (uk), Indonesian (id),